syntax = "proto3";
package urlshortener.v1;
option go_package = "github.com/ndajr/urlshortener-go/rpc/proto/v1";

import "google/api/annotations.proto";

message ShortenURLRequest {
  string original_url = 1;
}

message ShortenURLResponse {
  string short_code = 1;
}

message GetOriginalURLRequest {
  string short_code = 1;
}

message GetOriginalURLResponse {
  string original_url = 1;
}

service URLShortenerService {
  rpc ShortenURL(ShortenURLRequest) returns (ShortenURLResponse) {
    option (google.api.http).post = "/api/v1/shorten";
    option (google.api.http).body = "*";
  }
  rpc GetOriginalURL(GetOriginalURLRequest) returns (GetOriginalURLResponse) {
    option (google.api.http).get = "/api/v1/original/{short_code}";
  };
}
